--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -2,22 +2,36 @@
   "enterPhone": "أدخل رقم هاتفك",
   "enterName": "أدخل اسم المستخدم",
   "enterPassword": "أدخل كلمة المرور",
-  "signIn": "تسجيل الدخول",
+  "signIn": "تسجيل دخول",
   "signUp": "إنشاء حساب",
+  "welcom": "مرحباً",
+  "dontHaveAccount": "ليس لديك حساب؟",
+  "alreadyHaveAccount": "لديك حساب بالفعل؟",
+  "signInToContinue": "سجل دخولك للمتابعة",
+  "signUpToContinue": "أنشئ حساباً للمتابعة",
   "phoneNumber": "رقم الهاتف",
-  "enterValidphone": "أدخل رقم هاتف صالح",
-  "enterValidPassword": "يجب أن تكون كلمة المرور 8 أحرف على الأقل، وتشمل حرف كبير وصغير ورقم ورمز خاص",
-
+  "enterValidphone": "أدخل رقم هاتف صحيح",
+  "enterValidPassword": "يجب أن تحتوي كلمة المرور على 8 أحرف على الأقل، وتتضمن حرف كبير وصغير ورقم ورمز خاص",
   "userName": "اسم المستخدم",
   "password": "كلمة المرور",
   "firstName": "الاسم الأول",
-  "middleName": "اسم الأب",
+  "middleName": "الاسم الأوسط",
   "lastName": "اسم العائلة",
   "mainAddress": "العنوان الرئيسي",
+  "enterMainAddress": "أدخل عنوانك الرئيسي",
+  "enterFirstName": "أدخل اسمك الأول",
+  "enterMiddleName": "أدخل اسمك الأوسط",
+  "enterLastName": "أدخل اسم عائلتك",
+  "inValidEmailOrPassword": "رقم الهاتف أو كلمة المرور غير صحيحة",
+  "oppsTryLater": "عذراً، حاول مرة أخرى لاحقاً",
+  "error_connection": "خطأ في الاتصال. يرجى التحقق من الإنترنت.",
+  "error_timeout": "انتهت مهلة الاتصال بالخادم.",
+  "error_cancelled": "تم إلغاء الطلب إلى الخادم.",
+  "error_receive_timeout": "انتهت مهلة استقبال البيانات من الخادم.",
+  "error_unknown": "فشل الاتصال بالخادم بسبب مشكلة في الإنترنت.",
+  "error_send_timeout": "انتهت مهلة إرسال البيانات إلى الخادم.",
+  "error_bad_response": "حدث خطأ ما، حاول مرة أخرى.",
+  "error_something_wrong": "حدث خطأ ما.",
+  "error_unknown_general": "حدث خطأ غير معروف."
 
-  "enterMainAddress": "أدخل العنوان الرئيسي",
-  "enterFirstName": "أدخل الاسم الأول",
-  "enterMiddleName": "أدخل اسم الأب",
-  "enterLastName": "أدخل اسم العائلة",
-  "inValidEmailOrPassword": "البريد الإلكتروني أو كلمة المرور غير صحيحة"
 }
