--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -26,9 +26,17 @@
 "enterMiddleName":"Enter your middle name",
 "enterLastName":"Enter your last name",
 "inValidEmailOrPassword":"Invalid phone or password",
-"oppsTryLater":"Opps, try again later"
+"oppsTryLater":"Opps, try again later",
 
-
+ "error_connection": "Connection error. Please check your internet.",
+  "error_timeout": "Connection timed out with server.",
+  "error_cancelled": "Request to server was cancelled.",
+  "error_receive_timeout": "Receive timeout with server.",
+  "error_unknown": "Connection failed due to internet connection.",
+  "error_send_timeout": "Send timeout with server.",
+  "error_bad_response": "Something went wrong, try again.",
+  "error_something_wrong": "Something went wrong.",
+  "error_unknown_general": "An unknown error occurred."
 
 
 
