--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -2,36 +2,46 @@
   "enterPhone": "أدخل رقم هاتفك",
   "enterName": "أدخل اسم المستخدم",
   "enterPassword": "أدخل كلمة المرور",
-  "signIn": "تسجيل دخول",
+  "signIn": "تسجيل الدخول",
   "signUp": "إنشاء حساب",
-  "welcom": "مرحباً",
+  "welcom": "مرحبًا",
   "dontHaveAccount": "ليس لديك حساب؟",
-  "alreadyHaveAccount": "لديك حساب بالفعل؟",
-  "signInToContinue": "سجل دخولك للمتابعة",
-  "signUpToContinue": "أنشئ حساباً للمتابعة",
+  "alreadyHaveAccount": "هل لديك حساب بالفعل؟",
+  "signInToContinue": "سجّل الدخول للمتابعة",
+  "signUpToContinue": "أنشئ حسابًا للمتابعة",
   "phoneNumber": "رقم الهاتف",
-  "enterValidphone": "أدخل رقم هاتف صحيح",
-  "enterValidPassword": "يجب أن تحتوي كلمة المرور على 8 أحرف على الأقل، وتتضمن حرف كبير وصغير ورقم ورمز خاص",
+  "enterValidphone": "أدخل رقم هاتف صالح",
+  "enterValidPassword": "يجب أن تكون كلمة المرور 8 أحرف على الأقل وتحتوي على حرف كبير وصغير ورقم ورمز خاص",
+
   "userName": "اسم المستخدم",
   "password": "كلمة المرور",
   "firstName": "الاسم الأول",
   "middleName": "الاسم الأوسط",
   "lastName": "اسم العائلة",
   "mainAddress": "العنوان الرئيسي",
+
   "enterMainAddress": "أدخل عنوانك الرئيسي",
   "enterFirstName": "أدخل اسمك الأول",
   "enterMiddleName": "أدخل اسمك الأوسط",
-  "enterLastName": "أدخل اسم عائلتك",
+  "enterLastName": "أدخل اسم العائلة",
   "inValidEmailOrPassword": "رقم الهاتف أو كلمة المرور غير صحيحة",
-  "oppsTryLater": "عذراً، حاول مرة أخرى لاحقاً",
+  "oppsTryLater": "عذرًا، حاول مرة أخرى لاحقًا",
+
   "error_connection": "خطأ في الاتصال. يرجى التحقق من الإنترنت.",
   "error_timeout": "انتهت مهلة الاتصال بالخادم.",
   "error_cancelled": "تم إلغاء الطلب إلى الخادم.",
-  "error_receive_timeout": "انتهت مهلة استقبال البيانات من الخادم.",
-  "error_unknown": "فشل الاتصال بالخادم بسبب مشكلة في الإنترنت.",
+  "error_receive_timeout": "انتهت مهلة استلام البيانات من الخادم.",
+  "error_unknown": "فشل الاتصال بسبب مشكلة في الإنترنت.",
   "error_send_timeout": "انتهت مهلة إرسال البيانات إلى الخادم.",
-  "error_bad_response": "حدث خطأ ما، حاول مرة أخرى.",
+  "error_bad_response": "حدث خطأ ما، يرجى المحاولة مرة أخرى.",
   "error_something_wrong": "حدث خطأ ما.",
-  "error_unknown_general": "حدث خطأ غير معروف."
-
+  "error_unknown_general": "حدث خطأ غير معروف.",
+  "error_connection_timeout": "انتهت مهلة الاتصال. يرجى المحاولة مرة أخرى.",
+  "error_default": "حدث خطأ غير متوقع.",
+  "error_unknown_occurred": "حدث خطأ غير معروف.",
+  "error_bad_request": "طلب غير صالح. يرجى التحقق من البيانات المدخلة.",
+  "error_unauthorized": "دخول غير مصرح. يرجى تسجيل الدخول مرة أخرى.",
+  "error_forbidden": "الدخول مرفوض.",
+  "error_not_found": "المورد غير موجود.",
+  "error_server": "خطأ في الخادم الداخلي."
 }
